--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://10.127.127.74:3306/journals?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
