--- a/Code/Dockerfile
+++ b/Code/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:alpine
 COPY target/journals-1.0.jar journals-1.0.jar
 EXPOSE 8080
+EXPOSE 3306
 CMD ["java", "-jar", "/journals-1.0.jar"]
-
